--- a/login.html
+++ b/login.html
@@ -43,17 +43,17 @@
                         </div>
                         <div class="pwd">
                             <div class="form-label" id="pwd-l">
-                                <label for="username">Password</label>
+                                <label for="password">Password</label>
                             </div>
                             <div class="form-input" id="pwd-input">
                                 <input 
                                 type="password" 
-                                id="pwd1" 
+                                id="pwd" 
                                 placeholder="Enter a Password">
                             </div>
                         </div>
                         <div class="submit">
-                            <button id="login">Login</button>
+                            <button type="button" id="login" >Login</button>
                         </div>
                     </form>
                 </div>
