--- a/signup.html
+++ b/signup.html
@@ -69,6 +69,7 @@
                             </div>
                             <div class="form-input" id="gender-input">
                                 <select id="gender-in">
+                                    <option value="" disabled selected>Select your gender</option>
                                     <option value="male">Male</option>
                                     <option value="female">Female</option>
                                 </select>
@@ -107,7 +108,7 @@
                             </div>
                         </div>
                         <div class="submit">
-                            <button id="signup">Signup</button>
+                            <button type="button" id="signup" onclick="register()">Signup</button>
                         </div>
                     </form>
                 </div>
