--- a/dashboard.html
+++ b/dashboard.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/dashboard.css">
     <title>Dasnboard</title>
 </head>
+
 <body>
     <nav class="navbar">
         <a href="#" class="branding">Produly</a>
         <ul class="nav-menu">
             <li class="nav-item">
-                <a href="index.html" class="nav-link">Logout</a>
+                <a href="index.html" class="nav-link logout">Logout</a>
             </li>
             <li class="nav-item">
                 <a href="profile.html" class="nav-link">Profile</a>
@@ -50,7 +52,7 @@
 
             </div>
             <div class="gif">
-            
+
             </div>
         </div>
         <div class="task-area">
@@ -63,11 +65,7 @@
                                 <label class="task-name">Task Name</label>
                             </div>
                             <div class="form-inputs" id="name-input">
-                                <input 
-                                type="text"
-                                id="name-inputs"
-                                placeholder="Enter Task Name"
-                                >
+                                <input type="text" id="name-inputs" placeholder="Enter Task Name">
                             </div>
                         </div>
                         <div class="task-des">
@@ -75,11 +73,7 @@
                                 <label class="task-des">Task Description</label>
                             </div>
                             <div class="form-inputs" id="des-input">
-                                <input 
-                                type="text"
-                                id="des-inputs"
-                                placeholder="Enter Task Description"
-                                >
+                                <input type="text" id="des-inputs" placeholder="Enter Task Description">
                             </div>
                         </div>
                         <div class="submit">
@@ -96,4 +90,5 @@
     </div>
     <script src="/scripts/dashboard.js"></script>
 </body>
+
 </html>
